port the game to SDL3 (untested!)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ endif()
 
 include_directories(${PROJECT_SOURCE_DIR})
 add_compile_options(-fsigned-char -Wno-write-strings)
-add_compile_definitions(ALLOW_TWINSTICK PLATFORM_UNIX)
+add_compile_definitions(ALLOW_TWINSTICK PLATFORM_UNIX LOCALE=US TARGET=POSTAL_2015)
 
 add_library(RSPiX STATIC
 	${PROJECT_SOURCE_DIR}/RSPiX/Src/BLUE/unix/Bdebug.cpp
@@ -111,6 +111,99 @@ add_library(WishPiX STATIC
 	${PROJECT_SOURCE_DIR}/WishPiX/Spry/spry.cpp
 )
 target_link_libraries(WishPiX PRIVATE RSPiX)
+
+add_executable(postal1
+	${PROJECT_SOURCE_DIR}/AnimThing.cpp
+	${PROJECT_SOURCE_DIR}/ball.cpp
+	${PROJECT_SOURCE_DIR}/barrel.cpp
+	${PROJECT_SOURCE_DIR}/bouy.cpp
+	${PROJECT_SOURCE_DIR}/character.cpp
+	${PROJECT_SOURCE_DIR}/chunk.cpp
+	${PROJECT_SOURCE_DIR}/deathWad.cpp
+	${PROJECT_SOURCE_DIR}/demon.cpp
+	${PROJECT_SOURCE_DIR}/dispenser.cpp
+	${PROJECT_SOURCE_DIR}/doofus.cpp
+	${PROJECT_SOURCE_DIR}/dude.cpp
+	${PROJECT_SOURCE_DIR}/explode.cpp
+	${PROJECT_SOURCE_DIR}/fire.cpp
+	${PROJECT_SOURCE_DIR}/fireball.cpp
+	${PROJECT_SOURCE_DIR}/firebomb.cpp
+	${PROJECT_SOURCE_DIR}/flag.cpp
+	${PROJECT_SOURCE_DIR}/flagbase.cpp
+	${PROJECT_SOURCE_DIR}/grenade.cpp
+	${PROJECT_SOURCE_DIR}/heatseeker.cpp
+	${PROJECT_SOURCE_DIR}/hood.cpp
+	${PROJECT_SOURCE_DIR}/item3d.cpp
+	${PROJECT_SOURCE_DIR}/mine.cpp
+	${PROJECT_SOURCE_DIR}/napalm.cpp
+	${PROJECT_SOURCE_DIR}/navnet.cpp
+	${PROJECT_SOURCE_DIR}/ostrich.cpp
+	${PROJECT_SOURCE_DIR}/person.cpp
+	${PROJECT_SOURCE_DIR}/PowerUp.cpp
+	${PROJECT_SOURCE_DIR}/pylon.cpp
+	${PROJECT_SOURCE_DIR}/rocket.cpp
+	${PROJECT_SOURCE_DIR}/sentry.cpp
+	${PROJECT_SOURCE_DIR}/SndRelay.cpp
+	${PROJECT_SOURCE_DIR}/SoundThing.cpp
+	${PROJECT_SOURCE_DIR}/thing.cpp
+	${PROJECT_SOURCE_DIR}/Thing3d.cpp
+	${PROJECT_SOURCE_DIR}/trigger.cpp
+	${PROJECT_SOURCE_DIR}/warp.cpp
+	${PROJECT_SOURCE_DIR}/weapon.cpp
+	${PROJECT_SOURCE_DIR}/alphablitforpostal.cpp
+	${PROJECT_SOURCE_DIR}/Anim3D.cpp
+	${PROJECT_SOURCE_DIR}/BufQ.cpp
+	${PROJECT_SOURCE_DIR}/bulletFest.cpp
+	${PROJECT_SOURCE_DIR}/camera.cpp
+	${PROJECT_SOURCE_DIR}/crawler.cpp
+	${PROJECT_SOURCE_DIR}/cutscene.cpp
+	${PROJECT_SOURCE_DIR}/encrypt.cpp
+	${PROJECT_SOURCE_DIR}/gameedit.cpp
+	${PROJECT_SOURCE_DIR}/GameSettings.cpp
+	${PROJECT_SOURCE_DIR}/grip.cpp
+	${PROJECT_SOURCE_DIR}/IdBank.cpp
+	${PROJECT_SOURCE_DIR}/InputSettings.cpp
+	${PROJECT_SOURCE_DIR}/InputSettingsDlg.cpp
+	${PROJECT_SOURCE_DIR}/keys.cpp
+	${PROJECT_SOURCE_DIR}/Log.cpp
+	${PROJECT_SOURCE_DIR}/logtab.cpp
+	${PROJECT_SOURCE_DIR}/MemFileFest.cpp
+	${PROJECT_SOURCE_DIR}/MenuSettings.cpp
+	${PROJECT_SOURCE_DIR}/MenuTrans.cpp
+	${PROJECT_SOURCE_DIR}/net.cpp
+	${PROJECT_SOURCE_DIR}/NetBrowse.cpp
+	${PROJECT_SOURCE_DIR}/NetClient.cpp
+	${PROJECT_SOURCE_DIR}/NetDlg.cpp
+	${PROJECT_SOURCE_DIR}/netmsgr.cpp
+	${PROJECT_SOURCE_DIR}/NetServer.cpp
+	${PROJECT_SOURCE_DIR}/organ.cpp
+	${PROJECT_SOURCE_DIR}/Personatorium.cpp
+	${PROJECT_SOURCE_DIR}/ProtoBSDIP.cpp
+	${PROJECT_SOURCE_DIR}/realm.cpp
+	${PROJECT_SOURCE_DIR}/scene.cpp
+	${PROJECT_SOURCE_DIR}/score.cpp
+	${PROJECT_SOURCE_DIR}/settings.cpp
+	${PROJECT_SOURCE_DIR}/smash.cpp
+	${PROJECT_SOURCE_DIR}/socket.cpp
+	${PROJECT_SOURCE_DIR}/StockPile.cpp
+	${PROJECT_SOURCE_DIR}/TexEdit.cpp
+	${PROJECT_SOURCE_DIR}/toolbar.cpp
+	${PROJECT_SOURCE_DIR}/TriggerRegions.cpp
+	${PROJECT_SOURCE_DIR}/update.cpp
+	${PROJECT_SOURCE_DIR}/yatime.cpp
+	${PROJECT_SOURCE_DIR}/aivars.cpp
+	${PROJECT_SOURCE_DIR}/band.cpp
+	${PROJECT_SOURCE_DIR}/credits.cpp
+	${PROJECT_SOURCE_DIR}/game.cpp
+	${PROJECT_SOURCE_DIR}/input.cpp
+	${PROJECT_SOURCE_DIR}/localize.cpp
+	${PROJECT_SOURCE_DIR}/main.cpp
+	${PROJECT_SOURCE_DIR}/menus.cpp
+	${PROJECT_SOURCE_DIR}/play.cpp
+	${PROJECT_SOURCE_DIR}/SampleMaster.cpp
+	${PROJECT_SOURCE_DIR}/title.cpp
+)
+target_link_libraries(postal1 PRIVATE WishPiX RSPiX SDL3::SDL3)
 
 if(BUILD_EXTRAS)
 	add_executable(saktool ${PROJECT_SOURCE_DIR}/saktool.c)
